--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "startAll": "(cd ./sveltepod && npm run podiumbuild) && (cd ./reactpod && npm run podiumbuild) && (cd ./htmlbuspod && npm run podiumbuild) && (cd ./vuepod && npm run podiumbuild) && (cd ./app && npm start)",
-    "installAll": "(cd ./sveltepod && npm install) && (cd ./reactpod && yarn) && (cd ./htmlbuspod && npm install) && (cd ./vuepod && npm install) && (cd ./app && npm install)" 
+    "installAll": "(cd ./sveltepod && npm install) && (cd ./reactpod && yarn) && (cd ./htmlbuspod && npm install) && (cd ./vuepod && npm install) && (cd ./app && npm install)",
+    "updateAll": "(cd ./sveltepod && npm update) && (cd ./reactpod && yarn upgrade) && (cd ./htmlbuspod && npm update) && (cd ./vuepod && npm update) && (cd ./app && npm update)" 
   },
   "repository": {
     "type": "git",
